# dietaryindex

./: .gitignore  AGENTS.md  README.md  codex_context.md  index.html  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
dietaryindex_py/: __init__.py  acs2020.py  acs2020_v2.py  ahei.py  dii.py  hei.py  mind.py
python/: pyproject.toml
python/dietaryindex_py/: __init__.py  acs2020.py  acs2020_v2.py  ahei.py  webapp.py
python/dietaryindex_py/templates/: index.html
python/tests/: test_acs2020.py
r_pkg/R/: HEI2020.R  PHDI.R
r_pkg/man/: HEI2020.Rd  PHDI.Rd
tests/: test_acs2020.py  test_simple_scores.py
